--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\mario\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+file.reference.gson-2.6.2.jar=C:\\Users\\aluno\\Desktop\\VendaCarros-master\\VendaCarros-master\\gson-2.6.2.jar
+user.properties.file=C:\\Users\\aluno\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
